--- a/translations/game+intl-icu.en.xlf
+++ b/translations/game+intl-icu.en.xlf
@@ -16550,20 +16550,6 @@ Each upgrade brings various advantages (defence, water, special skills...).It's 
         <target>You have used {count} action point(s).</target>
       </segment>
     </unit>
-    <unit id="tTMCru5">
-      <notes>
-        <note category="german">Als du durch das Fenster blickst, stellst du fest, dass das Haus von {citizen} keinerlei interessante
-                    Gegenstände enthält. Ein paar Tonscherben, viel Staub und eine tote Ratte ist alles, was du erkennen kannst.
-                    Nichts, was der Mühe wert wäre.</note>
-        <note category="from">twig:///templates/ajax/game/town/home_foreign.html.twig</note>
-      </notes>
-      <segment>
-        <source>Als du durch das Fenster blickst, stellst du fest, dass das Haus von {citizen} keinerlei interessante
-                    Gegenstände enthält. Ein paar Tonscherben, viel Staub und eine tote Ratte ist alles, was du erkennen kannst.
-                    Nichts, was der Mühe wert wäre.</source>
-        <target>Looking through the window, you see that {citizen}'s house seems to be bereft of anything interesting. Some rough pottery, more dust than on Dayan's desk, and a very dead rat. Nothing worth stealing.</target>
-      </segment>
-    </unit>
     <unit id="lo3tdoY" name="Was für eine schreckliche Nacht!">
       <notes>
         <note category="german">Was für eine schreckliche Nacht!</note>
@@ -23234,6 +23220,56 @@ Each upgrade brings various advantages (defence, water, special skills...).It's 
       <segment>
         <source>Wie aus dem Nichts stand die Meute auf einmal vor dem Stadttor...</source>
         <target>Wie aus dem Nichts stand die Meute auf einmal vor dem Stadttor...</target>
+      </segment>
+    </unit>
+    <unit id="bAX7fz8">
+      <notes>
+        <note category="german">{intruder} ist bei {victim} eingebrochen und hat dabei das Alarmsystem ausgelöst!!</note>
+        <note category="from">db://LogEntryTemplate</note>
+      </notes>
+      <segment>
+        <source>{intruder} ist bei {victim} eingebrochen und hat dabei das Alarmsystem ausgelöst!!</source>
+        <target>{intruder} has sneaked into {victim}'s house and set off their alarm!!</target>
+      </segment>
+    </unit>
+    <unit id="_Vp3AUE">
+      <notes>
+        <note category="german">Du hast das Alarmsystem bei {victim} ausgelöst! Die ganze Stadt weiß jetzt über deinen Einbruch Bescheid.</note>
+        <note category="from">php:///src/Controller/Town/TownController.php</note>
+      </notes>
+      <segment>
+        <source>Du hast das Alarmsystem bei {victim} ausgelöst! Die ganze Stadt weiß jetzt über deinen Einbruch Bescheid.</source>
+        <target>You have set off the alarm system installed at {victim}'s house! The whole town has been alerted to your intrusion.</target>
+      </segment>
+    </unit>
+    <unit id="S0oceSj">
+      <notes>
+        <note category="german">Als du durch das Fenster blickst, stellst du fest, dass das Haus von {citizen} keinerlei interessante Gegenstände enthält. Ein paar Tonscherben, viel Staub und eine tote Ratte ist alles, was du erkennen kannst. Nichts, was der Mühe wert wäre.</note>
+        <note category="from">twig:///templates/ajax/game/town/home_foreign.html.twig</note>
+      </notes>
+      <segment>
+        <source>Als du durch das Fenster blickst, stellst du fest, dass das Haus von {citizen} keinerlei interessante Gegenstände enthält. Ein paar Tonscherben, viel Staub und eine tote Ratte ist alles, was du erkennen kannst. Nichts, was der Mühe wert wäre.</source>
+        <target>Looking through the window, you see that {citizen}'s house seems to be bereft of anything interesting. Some rough pottery, more dust than on Dayan's desk, and a very dead rat. Nothing worth stealing.</target>
+      </segment>
+    </unit>
+    <unit id="SBvsBbX" name="Alarm (Bürger {citizen})">
+      <notes>
+        <note category="german">Alarm (Bürger {citizen})</note>
+        <note category="from">php:///src/Controller/Messages/MessageTownMessageController.php</note>
+      </notes>
+      <segment>
+        <source>Alarm (Bürger {citizen})</source>
+        <target>Alarm ({citizen})</target>
+      </segment>
+    </unit>
+    <unit id="L_ADbyN">
+      <notes>
+        <note category="german">{citizen} hat bei dir daheim den Alarm ausgelöst, als er (sie) um {time} versuchte bei dir einzubrechen!</note>
+        <note category="from">php:///src/Controller/Messages/MessageTownMessageController.php</note>
+      </notes>
+      <segment>
+        <source>{citizen} hat bei dir daheim den Alarm ausgelöst, als er (sie) um {time} versuchte bei dir einzubrechen!</source>
+        <target>{citizen} set off your alarm trying to break in to your house at precisely {time}!</target>
       </segment>
     </unit>
   </file>
