--- a/translations/game+intl-icu.es.xlf
+++ b/translations/game+intl-icu.es.xlf
@@ -16557,20 +16557,6 @@
         <target>Has utilizado {count} punto(s) de acción.</target>
       </segment>
     </unit>
-    <unit id="tTMCru5">
-      <notes>
-        <note category="german">Als du durch das Fenster blickst, stellst du fest, dass das Haus von {citizen} keinerlei interessante
-                    Gegenstände enthält. Ein paar Tonscherben, viel Staub und eine tote Ratte ist alles, was du erkennen kannst.
-                    Nichts, was der Mühe wert wäre.</note>
-        <note category="from">twig:///templates/ajax/game/town/home_foreign.html.twig</note>
-      </notes>
-      <segment>
-        <source>Als du durch das Fenster blickst, stellst du fest, dass das Haus von {citizen} keinerlei interessante
-                    Gegenstände enthält. Ein paar Tonscherben, viel Staub und eine tote Ratte ist alles, was du erkennen kannst.
-                    Nichts, was der Mühe wert wäre.</source>
-        <target>Husmeando por la ventana, parece que la casa de {citizen} no contiene ningún objeto interesante. Trapos, mucho polvo y una rata muerta. Nada que valga la pena. </target>
-      </segment>
-    </unit>
     <unit id="lo3tdoY" name="Was für eine schreckliche Nacht!">
       <notes>
         <note category="german">Was für eine schreckliche Nacht!</note>
@@ -23177,6 +23163,58 @@
       <segment>
         <source>Wie aus dem Nichts stand die Meute auf einmal vor dem Stadttor...</source>
         <target>Y de pronto, el horror se acrecienta frente al portal del pueblo...</target>
+      </segment>
+    </unit>
+    <unit id="bAX7fz8">
+      <notes>
+        <note category="german">{intruder} ist bei {victim} eingebrochen und hat dabei das Alarmsystem ausgelöst!!</note>
+        <note category="from">db://LogEntryTemplate</note>
+      </notes>
+      <segment>
+        <source>{intruder} ist bei {victim} eingebrochen und hat dabei das Alarmsystem ausgelöst!!</source>
+        <target>{intruder} ha ingresado a la casa de {victim} y ha hecho sonar la alarma!!</target>
+      </segment>
+    </unit>
+    <unit id="_Vp3AUE">
+      <notes>
+        <note category="german">Du hast das Alarmsystem bei {victim} ausgelöst! Die ganze Stadt weiß jetzt über deinen Einbruch Bescheid.</note>
+        <note category="from">php:///src/Controller/Town/TownController.php</note>
+      </notes>
+      <segment>
+        <source>Du hast das Alarmsystem bei {victim} ausgelöst! Die ganze Stadt weiß jetzt über deinen Einbruch Bescheid.</source>
+        <target>¡Has activado el sistema de alarma instalado en casa de {victim}! Ahora todo el pueblo está al corriente de tu intrusión.</target>
+      </segment>
+    </unit>
+    <unit id="S0oceSj">
+      <notes>
+        <note category="german">Als du durch das Fenster blickst, stellst du fest, dass das Haus von {citizen} keinerlei interessante Gegenstände enthält. Ein paar Tonscherben, viel Staub und eine tote Ratte ist alles, was du erkennen kannst. Nichts, was der Mühe wert wäre.</note>
+        <note category="from">twig:///templates/ajax/game/town/home_foreign.html.twig</note>
+      </notes>
+      <segment>
+        <source>Als du durch das Fenster blickst, stellst du fest, dass das Haus von {citizen} keinerlei interessante Gegenstände enthält. Ein paar Tonscherben, viel Staub und eine tote Ratte ist alles, was du erkennen kannst. Nichts, was der Mühe wert wäre.</source>
+        <target>Husmeando por la ventana, parece que la casa de {citizen} no contiene ningún objeto interesante. Trapos, mucho polvo y una rata muerta. Nada que valga la pena. </target>
+      </segment>
+    </unit>
+    <unit id="SBvsBbX" name="Alarm (Bürger {citizen})">
+      <notes>
+        <note category="german">Alarm (Bürger {citizen})</note>
+        <note category="from">php:///src/Controller/Messages/MessageTownMessageController.php</note>
+        <note category="state">new</note>
+      </notes>
+      <segment>
+        <source>Alarm (Bürger {citizen})</source>
+        <target>Alarm (Bürger {citizen})</target>
+      </segment>
+    </unit>
+    <unit id="L_ADbyN">
+      <notes>
+        <note category="german">{citizen} hat bei dir daheim den Alarm ausgelöst, als er (sie) um {time} versuchte bei dir einzubrechen!</note>
+        <note category="from">php:///src/Controller/Messages/MessageTownMessageController.php</note>
+        <note category="state">new</note>
+      </notes>
+      <segment>
+        <source>{citizen} hat bei dir daheim den Alarm ausgelöst, als er (sie) um {time} versuchte bei dir einzubrechen!</source>
+        <target>{citizen} hat bei dir daheim den Alarm ausgelöst, als er (sie) um {time} versuchte bei dir einzubrechen!</target>
       </segment>
     </unit>
   </file>
