--- a/translations/global+intl-icu.fr.xlf
+++ b/translations/global+intl-icu.fr.xlf
@@ -3914,5 +3914,16 @@
         <target>Pas de résultats</target>
       </segment>
     </unit>
+    <unit id="mYGmtAE" name="Deine Nachricht benötigt einen Titel sowie Inhalt.">
+      <notes>
+        <note category="german">Deine Nachricht benötigt einen Titel sowie Inhalt.</note>
+        <note category="from">twig:///templates/scripts/errors/forum.txt.twig</note>
+        <note category="state">new</note>
+      </notes>
+      <segment>
+        <source>Deine Nachricht benötigt einen Titel sowie Inhalt.</source>
+        <target>Deine Nachricht benötigt einen Titel sowie Inhalt.</target>
+      </segment>
+    </unit>
   </file>
 </xliff>
