--- a/translations/soul+intl-icu.en.xlf
+++ b/translations/soul+intl-icu.en.xlf
@@ -4195,5 +4195,15 @@
         <target>Send as</target>
       </segment>
     </unit>
+    <unit id="X_Adc53">
+      <notes>
+        <note category="german">Wenn man den letzten Neuigkeiten Glauben schenken darf, gibt es in dieser Stadt noch Überlebende!</note>
+        <note category="from">twig:///templates/ajax/soul/view_town_content.html.twig</note>
+      </notes>
+      <segment>
+        <source>Wenn man den letzten Neuigkeiten Glauben schenken darf, gibt es in dieser Stadt noch Überlebende!</source>
+        <target>Last time we heard, there were still survivors in this town!</target>
+      </segment>
+    </unit>
   </file>
 </xliff>
