--- a/translations/soul+intl-icu.fr.xlf
+++ b/translations/soul+intl-icu.fr.xlf
@@ -4186,5 +4186,15 @@
         <target>Absender wählen</target>
       </segment>
     </unit>
+    <unit id="X_Adc53">
+      <notes>
+        <note category="german">Wenn man den letzten Neuigkeiten Glauben schenken darf, gibt es in dieser Stadt noch Überlebende!</note>
+        <note category="from">twig:///templates/ajax/soul/view_town_content.html.twig</note>
+      </notes>
+      <segment>
+        <source>Wenn man den letzten Neuigkeiten Glauben schenken darf, gibt es in dieser Stadt noch Überlebende!</source>
+        <target>Aux dernières nouvelles, il y aurait encore des survivants dans cette ville !</target>
+      </segment>
+    </unit>
   </file>
 </xliff>
