--- a/translations/admin+intl-icu.es.xlf
+++ b/translations/admin+intl-icu.es.xlf
@@ -185,7 +185,7 @@
     <unit id=".DCeMNu" name="Benutzername">
       <notes>
         <note category="german">Benutzername</note>
-        <note category="from">twig:///templates/ajax/admin/towns/explorer.html.twig;twig:///templates/ajax/admin/users/account.html.twig;twig:///templates/ajax/admin/users/all_index.html.twig;twig:///templates/ajax/admin/users/index.html.twig;twig:///templates/ajax/admin/users/multi_index.html.twig</note>
+        <note category="from">twig:///templates/ajax/admin/towns/explorer.html.twig;twig:///templates/ajax/admin/users/account.html.twig;twig:///templates/ajax/admin/users/all_index.html.twig;twig:///templates/ajax/admin/users/multi_index.html.twig</note>
       </notes>
       <segment>
         <source>Benutzername</source>
@@ -1239,7 +1239,7 @@
     <unit id="XCp8Tn4" name="Multi-Account Report">
       <notes>
         <note category="german">Multi-Account Report</note>
-        <note category="from">twig:///templates/ajax/admin/users/index.html.twig;twig:///templates/ajax/admin/users/listing_tabs.html.twig;twig:///templates/ajax/admin/users/multi_index.html.twig</note>
+        <note category="from">twig:///templates/ajax/admin/users/listing_tabs.html.twig;twig:///templates/ajax/admin/users/multi_index.html.twig</note>
       </notes>
       <segment>
         <source>Multi-Account Report</source>
@@ -1249,7 +1249,7 @@
     <unit id="NBT1t.l" name="Verdacht">
       <notes>
         <note category="german">Verdacht</note>
-        <note category="from">twig:///templates/ajax/admin/users/index.html.twig;twig:///templates/ajax/admin/users/multi_index.html.twig</note>
+        <note category="from">twig:///templates/ajax/admin/users/multi_index.html.twig</note>
       </notes>
       <segment>
         <source>Verdacht</source>
@@ -1259,7 +1259,7 @@
     <unit id="5D_B4LJ" name="Andere Accounts">
       <notes>
         <note category="german">Andere Accounts</note>
-        <note category="from">twig:///templates/ajax/admin/users/index.html.twig;twig:///templates/ajax/admin/users/multi_index.html.twig</note>
+        <note category="from">twig:///templates/ajax/admin/users/multi_index.html.twig</note>
       </notes>
       <segment>
         <source>Andere Accounts</source>
@@ -1269,7 +1269,7 @@
     <unit id="E6OsQAN" name="Bann">
       <notes>
         <note category="german">Bann</note>
-        <note category="from">twig:///templates/ajax/admin/users/index.html.twig;twig:///templates/ajax/admin/users/multi_index.html.twig</note>
+        <note category="from">twig:///templates/ajax/admin/users/multi_index.html.twig</note>
       </notes>
       <segment>
         <source>Bann</source>
@@ -1349,7 +1349,7 @@
     <unit id="E26lZPz" name="Klick, um Profil in neuem Tab zu öffnen">
       <notes>
         <note category="german">Klick, um Profil in neuem Tab zu öffnen</note>
-        <note category="from">twig:///templates/ajax/admin/users/index.html.twig;twig:///templates/ajax/admin/users/multi_index.html.twig</note>
+        <note category="from">twig:///templates/ajax/admin/users/multi_index.html.twig</note>
       </notes>
       <segment>
         <source>Klick, um Profil in neuem Tab zu öffnen</source>
@@ -1359,7 +1359,7 @@
     <unit id="KQDagiG" name="STRG+Klick, um zur Whitelist hinzuzufügen">
       <notes>
         <note category="german">STRG+Klick, um zur Whitelist hinzuzufügen</note>
-        <note category="from">twig:///templates/ajax/admin/users/index.html.twig;twig:///templates/ajax/admin/users/multi_index.html.twig</note>
+        <note category="from">twig:///templates/ajax/admin/users/multi_index.html.twig</note>
       </notes>
       <segment>
         <source>STRG+Klick, um zur Whitelist hinzuzufügen</source>
@@ -1369,7 +1369,7 @@
     <unit id="hVmvpi1" name="Whitelist">
       <notes>
         <note category="german">Whitelist</note>
-        <note category="from">twig:///templates/ajax/admin/users/index.html.twig;twig:///templates/ajax/admin/users/multi_index.html.twig</note>
+        <note category="from">twig:///templates/ajax/admin/users/multi_index.html.twig</note>
       </notes>
       <segment>
         <source>Whitelist</source>
