FR Translation for ghoul eat button tooltip outside

--- a/translations/game+intl-icu.fr.xlf
+++ b/translations/game+intl-icu.fr.xlf
@@ -23195,7 +23195,7 @@ cette violente opération...]]></target>
       </notes>
       <segment>
         <source>Als Ghul solltest du jeden Tag einen anderen Spieler auffressen.</source>
-        <target>Als Ghul solltest du jeden Tag einen anderen Spieler auffressen.</target>
+        <target>En tant que goule, vous pouvez dévorer un autre citoyen une fois par jour pour totalement assouvir votre soif de sang. </target>
       </segment>
     </unit>
   </file>
