ES Translation for ghoul eat button tooltip outside

--- a/translations/game+intl-icu.es.xlf
+++ b/translations/game+intl-icu.es.xlf
@@ -23236,7 +23236,7 @@
       </notes>
       <segment>
         <source>Als Ghul solltest du jeden Tag einen anderen Spieler auffressen.</source>
-        <target>Als Ghul solltest du jeden Tag einen anderen Spieler auffressen.</target>
+        <target>Como Mutante, puedes devorar a otro habítante una vez al día para saciar tu hambre de carne humana.</target>
       </segment>
     </unit>
   </file>
